infra/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-cloud-gateway
  labels:
    app: spring-cloud-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-cloud-gateway
  template:
    metadata:
      labels:
        app: spring-cloud-gateway
    spec:
      containers:
      - name: gateway
        image: gateway-service:phase5-messaging
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-cloud-gateway
spec:
  selector:
    app: spring-cloud-gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
